--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
           </div>
         </article>
 
-        <!-- CASA LITORAL -->
+        <!-- CASA BROMELIA -->
         <article class="model">
           <div class="model__head">
             <div>
@@ -258,7 +258,7 @@
           </div>
         </article>
 
-        <!-- CASA NORTE -->
+        <!-- CASA DINIZIA -->
         <article class="model">
           <div class="model__head">
             <div>
