--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <div class="model__head">
             <div>
               <h3>Casa Bixa</h3>
-              <p class="model__headline">120 m2 · 3 dorm · 5 amb · 2 banos · Cochera cubierta</p>
+              <p class="model__headline">44 m2 · 2 dorm · 1 banos </p>
             </div>
             <span class="badge">Premium light</span>
           </div>
@@ -137,7 +137,7 @@
           <div class="model__head">
             <div>
               <h3>Casa Camelia</h3>
-              <p class="model__headline">98 m2 · 3 dorm · 4 amb · 2 banos · 2 autos</p>
+              <p class="model__headline">45 m2 / 58m2 · 3 dorm · 4 amb · 2 banos · 2 autos</p>
             </div>
             <span class="badge">Familiar</span>
           </div>
@@ -228,7 +228,7 @@
         <article class="model">
           <div class="model__head">
             <div>
-              <h3>Casa Litoral</h3>
+              <h3>Casa Bromelia</h3>
               <p class="model__headline">78 m2 · 2 dorm · 3 amb · 2 banos · Descubierto</p>
             </div>
             <span class="badge">Compacta</span>
@@ -245,10 +245,16 @@
             </aside>
             <div class="model__visual" data-interval="4300">
               <div class="model__gallery">
-                <img class="slide active" src="Multimedia/Prop4/Render/alejandra-cifre-gonzalez-5nYLmG1m5lw-unsplash.jpg" alt="Casa Litoral render exterior">
-                <img class="slide" src="Multimedia/Prop4/Render/alejandra-cifre-gonzalez-ylyn5r4vxcA-unsplash.jpg" alt="Casa Litoral render interior">
-                <img class="slide" src="Multimedia/Prop4/Render/breno-assis-r3WAWU5Fi5Q-unsplash.jpg" alt="Casa Litoral living">
-                <img class="slide" src="Multimedia/Prop4/Render/terrah-holly-pmhdkgRCbtE-unsplash.jpg" alt="Casa Litoral dormitorio">
+                <img class="slide active" src="Multimedia/Prop4Bromelia/Render/1.1a.png" alt="Casa Litoral render exterior">
+                <img class="slide" src="Multimedia/Prop4Bromelia/Render/2.interior 2.3 - final 1.png" alt="Casa Litoral render interior">
+                <img class="slide" src="Multimedia/Prop4Bromelia/Render/3.interior 2.3.png" alt="Casa Litoral render interior">
+                <img class="slide" src="Multimedia/Prop4Bromelia/Render/4.interior 1 final-1.png" alt="Casa Litoral render interior">
+                <img class="slide" src="Multimedia/Prop4Bromelia/Render/5.2a.png" alt="Casa Litoral render interior">
+                <img class="slide" src="Multimedia/Prop4Bromelia/Render/6.3a.png" alt="Casa Litoral render interior">
+                <img class="slide" src="Multimedia/Prop4Bromelia/Render/7.5a.png" alt="Casa Litoral render interior">
+                <img class="slide" src="Multimedia/Prop4Bromelia/Render/8.4.png" alt="Casa Litoral render interior">
+                <img class="slide" src="Multimedia/Prop4Bromelia/Render/9.6a.png" alt="Casa Litoral render interior">
+                <img class="slide" src="Multimedia/Prop4Bromelia/Render/10.7.png" alt="Casa Litoral render interior">                                                                                                               
               </div>
               <div class="model__actions">
                 <a class="btn btn--ghost" href="Multimedia/Prop4/Planos/amsterdam-city-archives-9tmKEDz03uw-unsplash.jpg" target="_blank" rel="noopener">Ver planos</a>
@@ -262,7 +268,7 @@
         <article class="model">
           <div class="model__head">
             <div>
-              <h3>Casa Norte</h3>
+              <h3>Casa Dionizia</h3>
               <p class="model__headline">140 m2 · 3 dorm · 5 amb · 3 banos · Cochera doble</p>
             </div>
             <span class="badge">Luminosa</span>
@@ -279,10 +285,12 @@
             </aside>
             <div class="model__visual" data-interval="4000">
               <div class="model__gallery">
-                <img class="slide active" src="Multimedia/Prop5/Render/alejandra-cifre-gonzalez-5nYLmG1m5lw-unsplash.jpg" alt="Casa Norte render exterior">
-                <img class="slide" src="Multimedia/Prop5/Render/alejandra-cifre-gonzalez-ylyn5r4vxcA-unsplash.jpg" alt="Casa Norte render interior">
-                <img class="slide" src="Multimedia/Prop5/Render/breno-assis-r3WAWU5Fi5Q-unsplash.jpg" alt="Casa Norte living">
-                <img class="slide" src="Multimedia/Prop5/Render/terrah-holly-pmhdkgRCbtE-unsplash.jpg" alt="Casa Norte dormitorio">
+                <img class="slide active" src="Multimedia/Prop5Dionizia/Render/1.1a.png" alt="Casa Norte render exterior">
+                <img class="slide" src="Multimedia/Prop5Dionizia/Render/2.interior 1.3.png" alt="Casa Norte render interior">
+                <img class="slide" src="Multimedia/Prop5Dionizia/Render/3.interior 3.3.png" alt="Casa Norte render interior">
+                <img class="slide" src="Multimedia/Prop5Dionizia/Render/4.2a.png" alt="Casa Norte render interior">
+                <img class="slide" src="Multimedia/Prop5Dionizia/Render/5.3.png" alt="Casa Norte render interior">   
+                <img class="slide" src="Multimedia/Prop5Dionizia/Render/6.4.png" alt="Casa Norte render interior">                             
               </div>
               <div class="model__actions">
                 <a class="btn btn--ghost" href="Multimedia/Prop5/Planos/amsterdam-city-archives-9tmKEDz03uw-unsplash.jpg" target="_blank" rel="noopener">Ver planos</a>
