--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <header class="header">
     <div class="header__inner">
-      <a href="#" class="logo">
+      <a href="Multimedia/Logo/amazonia logo.png" class="logo">
         <span class="logo__icon">A</span>
         <span class="logo__text">
           <strong>Amazonia</strong>
