Add dropdown menus for model media and update logo

--- a/index.html
+++ b/index.html
@@ -11,12 +11,9 @@
 
   <header class="header">
     <div class="header__inner">
-      <a href="Multimedia/Logo/amazonia logo.png" class="logo">
-        <span class="logo__icon">A</span>
-        <span class="logo__text">
-          <strong>Amazonia</strong>
-          <small>Viviendas industrializadas</small>
-        </span>
+      <a href="#obra" class="logo">
+        <img src="Multimedia/Logo/amazonia logo.png" alt="Amazonia - Viviendas industrializadas" class="logo__image">
+        <span class="sr-only">Amazonia - Viviendas industrializadas</span>
       </a>
 
       <div class="page-title">Catalogo</div>
@@ -125,8 +122,18 @@
                 <img class="slide" src="Multimedia/Prop1Bixa/Render/2.AXO2.jpg" alt="Casa Andes living">
               </div>
               <div class="model__actions">
-                <a class="btn btn--ghost" href="Multimedia/Prop1Bixa/Planos/WhatsApp Image 2025-12-12 at 11.45.13.jpeg" target="_blank" rel="noopener">Ver planos</a>
-                <a class="btn" href="Multimedia/Prop1Bixa/Videos/BIXA INTERIOR COMPLETO.mp4" target="_blank" rel="noopener">Ver video</a>
+                <div class="media-dropdown">
+                  <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
+                  <div class="media-dropdown__menu" aria-label="Planos de Casa Bixa">
+                    <a class="media-dropdown__item" href="Multimedia/Prop1Bixa/Planos/WhatsApp Image 2025-12-12 at 11.45.13.jpeg" target="_blank" rel="noopener">Plano principal</a>
+                  </div>
+                </div>
+                <div class="media-dropdown">
+                  <button class="btn media-dropdown__toggle" type="button">Ver video</button>
+                  <div class="media-dropdown__menu" aria-label="Videos de Casa Bixa">
+                    <a class="media-dropdown__item" href="Multimedia/Prop1Bixa/Videos/BIXA INTERIOR COMPLETO.mp4" target="_blank" rel="noopener">Recorrido principal</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -177,8 +184,18 @@
      
               </div>
               <div class="model__actions">
-                <a class="btn btn--ghost" href="Multimedia/Prop2/Planos/amsterdam-city-archives-9tmKEDz03uw-unsplash.jpg" target="_blank" rel="noopener">Ver planos</a>
-                <a class="btn" href="Multimedia/Prop2Camelia/Videos/4_3 CASA CAMELIA VIDEO ETAPAS.mp4" target="_blank" rel="noopener">Ver video</a>
+                <div class="media-dropdown">
+                  <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
+                  <div class="media-dropdown__menu" aria-label="Planos de Casa Camelia">
+                    <a class="media-dropdown__item" href="Multimedia/Prop2/Planos/amsterdam-city-archives-9tmKEDz03uw-unsplash.jpg" target="_blank" rel="noopener">Plano principal</a>
+                  </div>
+                </div>
+                <div class="media-dropdown">
+                  <button class="btn media-dropdown__toggle" type="button">Ver video</button>
+                  <div class="media-dropdown__menu" aria-label="Videos de Casa Camelia">
+                    <a class="media-dropdown__item" href="Multimedia/Prop2Camelia/Videos/4_3 CASA CAMELIA VIDEO ETAPAS.mp4" target="_blank" rel="noopener">Recorrido por etapas</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -217,8 +234,18 @@
                 <img class="slide" src="Multimedia/Prop3Belladona/Render/11.CONTRAFRENTE BELLA DONNA 1.jpg" alt="Casa Peninsula render interior">                                                                               
               </div>
               <div class="model__actions">
-                <a class="btn btn--ghost" href="Multimedia/Prop3/Planos/amsterdam-city-archives-9tmKEDz03uw-unsplash.jpg" target="_blank" rel="noopener">Ver planos</a>
-                <a class="btn" href="Multimedia/Prop3Belladona/Videos/VIDEO BELLA DONNA EXT.mp4" target="_blank" rel="noopener">Ver video</a>
+                <div class="media-dropdown">
+                  <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
+                  <div class="media-dropdown__menu" aria-label="Planos de Casa Belladona">
+                    <a class="media-dropdown__item" href="Multimedia/Prop3/Planos/amsterdam-city-archives-9tmKEDz03uw-unsplash.jpg" target="_blank" rel="noopener">Plano principal</a>
+                  </div>
+                </div>
+                <div class="media-dropdown">
+                  <button class="btn media-dropdown__toggle" type="button">Ver video</button>
+                  <div class="media-dropdown__menu" aria-label="Videos de Casa Belladona">
+                    <a class="media-dropdown__item" href="Multimedia/Prop3Belladona/Videos/VIDEO BELLA DONNA EXT.mp4" target="_blank" rel="noopener">Recorrido exterior</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -257,8 +284,18 @@
                 <img class="slide" src="Multimedia/Prop4Bromelia/Render/10.7.png" alt="Casa Litoral render interior">                                                                                                               
               </div>
               <div class="model__actions">
-                <a class="btn btn--ghost" href="Multimedia/Prop4/Planos/amsterdam-city-archives-9tmKEDz03uw-unsplash.jpg" target="_blank" rel="noopener">Ver planos</a>
-                <a class="btn" href="Multimedia/Prop4/Videos/Video_Corto_de_Render_de_Casa.mp4" target="_blank" rel="noopener">Ver video</a>
+                <div class="media-dropdown">
+                  <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
+                  <div class="media-dropdown__menu" aria-label="Planos de Casa Bromelia">
+                    <a class="media-dropdown__item" href="Multimedia/Prop4/Planos/amsterdam-city-archives-9tmKEDz03uw-unsplash.jpg" target="_blank" rel="noopener">Plano principal</a>
+                  </div>
+                </div>
+                <div class="media-dropdown">
+                  <button class="btn media-dropdown__toggle" type="button">Ver video</button>
+                  <div class="media-dropdown__menu" aria-label="Videos de Casa Bromelia">
+                    <a class="media-dropdown__item" href="Multimedia/Prop4/Videos/Video_Corto_de_Render_de_Casa.mp4" target="_blank" rel="noopener">Recorrido principal</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -293,8 +330,18 @@
                 <img class="slide" src="Multimedia/Prop5Dionizia/Render/6.4.png" alt="Casa Norte render interior">                             
               </div>
               <div class="model__actions">
-                <a class="btn btn--ghost" href="Multimedia/Prop5/Planos/amsterdam-city-archives-9tmKEDz03uw-unsplash.jpg" target="_blank" rel="noopener">Ver planos</a>
-                <a class="btn" href="Multimedia/Prop5/Videos/Video_Corto_de_Render_de_Casa.mp4" target="_blank" rel="noopener">Ver video</a>
+                <div class="media-dropdown">
+                  <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
+                  <div class="media-dropdown__menu" aria-label="Planos de Casa Dionizia">
+                    <a class="media-dropdown__item" href="Multimedia/Prop5/Planos/amsterdam-city-archives-9tmKEDz03uw-unsplash.jpg" target="_blank" rel="noopener">Plano principal</a>
+                  </div>
+                </div>
+                <div class="media-dropdown">
+                  <button class="btn media-dropdown__toggle" type="button">Ver video</button>
+                  <div class="media-dropdown__menu" aria-label="Videos de Casa Dionizia">
+                    <a class="media-dropdown__item" href="Multimedia/Prop5/Videos/Video_Corto_de_Render_de_Casa.mp4" target="_blank" rel="noopener">Recorrido principal</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -327,8 +374,18 @@
                 <img class="slide" src="Multimedia/Prop6/Render/terrah-holly-pmhdkgRCbtE-unsplash.jpg" alt="Casa Patagonia dormitorio">
               </div>
               <div class="model__actions">
-                <a class="btn btn--ghost" href="Multimedia/Prop6/Planos/amsterdam-city-archives-9tmKEDz03uw-unsplash.jpg" target="_blank" rel="noopener">Ver planos</a>
-                <a class="btn" href="Multimedia/Prop6/Videos/Video_Corto_de_Render_de_Casa.mp4" target="_blank" rel="noopener">Ver video</a>
+                <div class="media-dropdown">
+                  <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
+                  <div class="media-dropdown__menu" aria-label="Planos de Casa Patagonia">
+                    <a class="media-dropdown__item" href="Multimedia/Prop6/Planos/amsterdam-city-archives-9tmKEDz03uw-unsplash.jpg" target="_blank" rel="noopener">Plano principal</a>
+                  </div>
+                </div>
+                <div class="media-dropdown">
+                  <button class="btn media-dropdown__toggle" type="button">Ver video</button>
+                  <div class="media-dropdown__menu" aria-label="Videos de Casa Patagonia">
+                    <a class="media-dropdown__item" href="Multimedia/Prop6/Videos/Video_Corto_de_Render_de_Casa.mp4" target="_blank" rel="noopener">Recorrido principal</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -361,8 +418,18 @@
                 <img class="slide" src="Multimedia/Prop7/Render/terrah-holly-pmhdkgRCbtE-unsplash.jpg" alt="Casa Rio dormitorio">
               </div>
               <div class="model__actions">
-                <a class="btn btn--ghost" href="Multimedia/Prop7/Planos/amsterdam-city-archives-9tmKEDz03uw-unsplash.jpg" target="_blank" rel="noopener">Ver planos</a>
-                <a class="btn" href="Multimedia/Prop7/Videos/Video_Corto_de_Render_de_Casa.mp4" target="_blank" rel="noopener">Ver video</a>
+                <div class="media-dropdown">
+                  <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
+                  <div class="media-dropdown__menu" aria-label="Planos de Casa Rio">
+                    <a class="media-dropdown__item" href="Multimedia/Prop7/Planos/amsterdam-city-archives-9tmKEDz03uw-unsplash.jpg" target="_blank" rel="noopener">Plano principal</a>
+                  </div>
+                </div>
+                <div class="media-dropdown">
+                  <button class="btn media-dropdown__toggle" type="button">Ver video</button>
+                  <div class="media-dropdown__menu" aria-label="Videos de Casa Rio">
+                    <a class="media-dropdown__item" href="Multimedia/Prop7/Videos/Video_Corto_de_Render_de_Casa.mp4" target="_blank" rel="noopener">Recorrido principal</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -399,8 +466,18 @@
                 <img class="slide" src="Multimedia/Prop8Quincho/Render/8.INTERIOR5.jpg" alt="Casa Sur render interior">                                                                
               </div>
               <div class="model__actions">
-                <a class="btn btn--ghost" href="Multimedia/Prop8/Planos/amsterdam-city-archives-9tmKEDz03uw-unsplash.jpg" target="_blank" rel="noopener">Ver planos</a>
-                <a class="btn" href="Multimedia/Prop8/Videos/Video_Corto_de_Render_de_Casa.mp4" target="_blank" rel="noopener">Ver video</a>
+                <div class="media-dropdown">
+                  <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
+                  <div class="media-dropdown__menu" aria-label="Planos de Quincho AMZ I">
+                    <a class="media-dropdown__item" href="Multimedia/Prop8/Planos/amsterdam-city-archives-9tmKEDz03uw-unsplash.jpg" target="_blank" rel="noopener">Plano principal</a>
+                  </div>
+                </div>
+                <div class="media-dropdown">
+                  <button class="btn media-dropdown__toggle" type="button">Ver video</button>
+                  <div class="media-dropdown__menu" aria-label="Videos de Quincho AMZ I">
+                    <a class="media-dropdown__item" href="Multimedia/Prop8/Videos/Video_Corto_de_Render_de_Casa.mp4" target="_blank" rel="noopener">Recorrido principal</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -472,6 +549,49 @@
     });
 
     startAuto();
+  });
+
+  const dropdowns = document.querySelectorAll('.media-dropdown');
+
+  const closeDropdowns = () => {
+    dropdowns.forEach((dropdown) => dropdown.classList.remove('is-open'));
+  };
+
+  dropdowns.forEach((dropdown) => {
+    const toggle = dropdown.querySelector('.media-dropdown__toggle');
+    const menu = dropdown.querySelector('.media-dropdown__menu');
+
+    if (!toggle || !menu) return;
+
+    toggle.addEventListener('click', (event) => {
+      event.stopPropagation();
+      const isOpen = dropdown.classList.contains('is-open');
+      closeDropdowns();
+
+      if (!isOpen) {
+        dropdown.classList.add('is-open');
+      }
+    });
+
+    menu.querySelectorAll('a').forEach((link) => {
+      link.addEventListener('click', () => {
+        dropdown.classList.remove('is-open');
+      });
+    });
+  });
+
+  document.addEventListener('click', (event) => {
+    const isDropdownClick = Array.from(dropdowns).some((dropdown) => dropdown.contains(event.target));
+
+    if (!isDropdownClick) {
+      closeDropdowns();
+    }
+  });
+
+  document.addEventListener('keyup', (event) => {
+    if (event.key === 'Escape') {
+      closeDropdowns();
+    }
   });
   </script>
 
