--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
                   <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
                   <div class="media-dropdown__menu" aria-label="Planos de Casa Bixa">
                     <a class="media-dropdown__item" href="Multimedia/Prop1Bixa/Planos/WhatsApp Image 2025-12-12 at 11.45.13.jpeg" target="_blank" rel="noopener">Plano principal</a>
+                    <a class="media-dropdown__item" href="Multimedia/Prop1Bixa/Planos/2.AXO2.jpg" target="_blank" rel="noopener">Plano principal</a>                        
                   </div>
                 </div>
                 <div class="media-dropdown">
