--- a/index.html
+++ b/index.html
@@ -109,17 +109,17 @@
               <div class="model__gallery">
                 <img class="slide active" src="Multimedia/Prop1Bixa/Render/11.FACHADA3.jpg" alt="Casa Andes render exterior">
                 
-                <img class="slide" src="Multimedia/Prop1Bixa/Render/1.AEREA.jpg" alt="Casa Andes render interior">
-                <img class="slide" src="Multimedia/Prop1Bixa/Render/5.COCINA.jpg" alt="Casa Andes dormitorio">                
-                <img class="slide" src="Multimedia/Prop1Bixa/Render/6.COMEDOR.jpg" alt="Casa Andes dormitorio">
-                <img class="slide" src="Multimedia/Prop1Bixa/Render/12.LIVING.jpg" alt="Casa Andes dormitorio">                              
-                <img class="slide" src="Multimedia/Prop1Bixa/Render/3.BAÑO1.jpg" alt="Casa Andes dormitorio">
-                <img class="slide" src="Multimedia/Prop1Bixa/Render/4.BAÑO2.jpg" alt="Casa Andes dormitorio">
-                <img class="slide" src="Multimedia/Prop1Bixa/Render/9.DORMITORIO2.jpg" alt="Casa Andes dormitorio">
-                <img class="slide" src="Multimedia/Prop1Bixa/Render/8.DORMITORIO1.jpg" alt="Casa Andes dormitorio">
-                <img class="slide" src="Multimedia/Prop1Bixa/Render/10.DORMITORIOSEC 1.jpg" alt="Casa Andes dormitorio">                
-                <img class="slide" src="Multimedia/Prop1Bixa/Render/7.CONTRAFRENTE2.jpg" alt="Casa Andes dormitorio">
-                <img class="slide" src="Multimedia/Prop1Bixa/Render/2.AXO2.jpg" alt="Casa Andes living">
+                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop1Bixa/Render/1.AEREA.jpg" alt="">
+                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop1Bixa/Render/5.COCINA.jpg" alt="Casa Andes dormitorio">                
+                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop1Bixa/Render/6.COMEDOR.jpg" alt="Casa Andes dormitorio">
+                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop1Bixa/Render/12.LIVING.jpg" alt="Casa Andes dormitorio">                              
+                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop1Bixa/Render/3.BAÑO1.jpg" alt="Casa Andes dormitorio">
+                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop1Bixa/Render/4.BAÑO2.jpg" alt="Casa Andes dormitorio">
+                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop1Bixa/Render/9.DORMITORIO2.jpg" alt="Casa Andes dormitorio">
+                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop1Bixa/Render/8.DORMITORIO1.jpg" alt="Casa Andes dormitorio">
+                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop1Bixa/Render/10.DORMITORIOSEC 1.jpg" alt="Casa Andes dormitorio">                
+                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop1Bixa/Render/7.CONTRAFRENTE2.jpg" alt="Casa Andes dormitorio">
+                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop1Bixa/Render/2.AXO2.jpg" alt="Casa Andes living">
               </div>
               <div class="model__actions">
                 <div class="media-dropdown">
