Mejora del apartado de descripción de modelos

--- a/index.html
+++ b/index.html
@@ -98,12 +98,21 @@
           </div>
           <div class="model__layout">
             <aside class="model__details">
-              <p>Vivienda compacta, funcional y eficiente.</p>
-              <ul>
-                <li>Casa Bixa es una vivienda industrializada de 44 m², diseñada para optimizar cada metro cuadrado sin resignar confort ni calidad constructiva. Es una solución ideal como primera vivienda, unidad para renta o proyecto de inversión.</li>
-                <li>Cuenta con dos dormitorios y un baño completo, además de un espacio social integrado de cocina–comedor–living, con una distribución eficiente que prioriza la habitabilidad, la iluminación natural y la funcionalidad diaria. Construida con el sistema AMZ de muros de hormigón, ofrece excelente desempeño térmico y acústico, rápida ejecución y costos controlados.</li>
-                <li>Casa Bixa es una vivienda sólida, moderna y eficiente, pensada para quienes buscan una solución compacta, bien resuelta y lista para habitar</li>
-              </ul>
+              <div class="description">
+                <span class="description__tag">Descripción</span>
+                <p class="description__headline">Vivienda compacta, funcional y eficiente.</p>
+
+                <div class="description__body">
+                  <p>Casa Bixa es una vivienda industrializada de 44 m² diseñada para optimizar cada metro cuadrado sin resignar confort ni calidad constructiva. Es una solución ideal como primera vivienda, unidad para renta o proyecto de inversión.</p>
+                  <p>Integra cocina, comedor y living en un ambiente social luminoso, con dos dormitorios y un baño completo. El sistema AMZ de muros de hormigón asegura excelente desempeño térmico y acústico, rápida ejecución y costos controlados.</p>
+                </div>
+
+                <ul class="description__list">
+                  <li>Planta eficiente que prioriza la habitabilidad diaria y la luz natural.</li>
+                  <li>Terminaciones sólidas y modernas listas para habitar desde el primer día.</li>
+                  <li>Formato compacto pensado para vivir, alquilar o invertir con confianza.</li>
+                </ul>
+              </div>
             </aside>
             <div class="model__visual" data-interval="4500">
               <div class="model__gallery">
@@ -151,16 +160,22 @@
           </div>
           <div class="model__layout">
             <aside class="model__details">
-              <p>Vivienda evolutiva industrializada. Casa Camelia es una vivienda diseñada para construirse por etapas, comenzando con un módulo inicial completo y habitable, y ampliándose en el tiempo según las necesidades de cada familia, sin mudanzas ni obras disruptivas.
-                  El proyecto se inicia con Casa Camelia 1 y, a medida que se requiere más espacio, se incorporan nuevas etapas constructivas previamente previstas en el diseño original.
-                  Etapas de crecimiento
-             </p>
-              <ul>
-                <li>Casa Camelia 1 – Etapa inicial: 45,38 m² cubiertos. Cocina–comedor integrados, living, 1 dormitorio y baño completo. + galería semicubierta con asador de 18,50 m², apta cochera.</li>
-                <li>Casa Camelia 2 – Primera ampliación: Se suma un segundo dormitorio (módulo de 12,80 m²), alcanzando 58,18 m² cubiertos.</li>
-                <li>Casa Camelia 3 – Ampliación final: Se incorpora un tercer dormitorio (módulo de 13 m²), totalizando 71,18 m² cubiertos.</li>
-                <li>Casa Camelia te permite empezar hoy y seguir construyendo cuando lo necesites, con un sistema eficiente, planificado y de alta calidad constructiva.</li>
-              </ul>
+              <div class="description">
+                <span class="description__tag">Descripción</span>
+                <p class="description__headline">Vivienda evolutiva industrializada, pensada para crecer sin obras disruptivas.</p>
+
+                <div class="description__body">
+                  <p>Casa Camelia se construye por etapas: comenzás con un módulo completo y habitable, y sumás metros cuando lo necesites. Todo está previsto en el diseño original para evitar mudanzas, derrumbes o retrabajos.</p>
+                  <p>El crecimiento está planificado desde el inicio: instalaciones listas, circulaciones definidas y espacios que se integran en cada fase para acompañar el ritmo de la familia.</p>
+                </div>
+
+                <ul class="description__list">
+                  <li><strong>Casa Camelia 1 – Etapa inicial (45,38 m²):</strong> Cocina–comedor integrados, living, 1 dormitorio y baño completo. Galería semicubierta con asador de 18,50 m² apta cochera.</li>
+                  <li><strong>Casa Camelia 2 – Primera ampliación (58,18 m²):</strong> Se suma un segundo dormitorio (módulo de 12,80 m²) manteniendo la planta despejada.</li>
+                  <li><strong>Casa Camelia 3 – Ampliación final (71,18 m²):</strong> Se incorpora un tercer dormitorio (módulo de 13 m²) para completar el programa familiar.</li>
+                  <li>Crecé en etapas con un sistema eficiente, planificado y de alta calidad constructiva.</li>
+                </ul>
+              </div>
             </aside>
             <div class="model__visual" data-interval="4200">
               <div class="model__gallery">
@@ -213,13 +228,22 @@
           </div>
           <div class="model__layout">
             <aside class="model__details">
-              <p>Doble altura, terrazas y visuales abiertas para lotes con vistas, pensada para que el paisaje entre a cada ambiente.</p>
-              <ul>
-                <li>Puente balconando sobre el estar.</li>
-                <li>Terraza privada en suite principal.</li>
-                <li>Ventanas piso a techo con DVH.</li>
-                <li>Family room elevado para cine en casa.</li>
-              </ul>
+              <div class="description">
+                <span class="description__tag">Descripción</span>
+                <p class="description__headline">Doble altura, terrazas y visuales abiertas para lotes con vistas.</p>
+
+                <div class="description__body">
+                  <p>Pensada para que el paisaje entre a cada ambiente, combinando carpinterías de piso a techo con espacios de encuentro en diferentes alturas.</p>
+                  <p>Los recorridos internos balconean sobre el estar principal, generando perspectiva y amplitud sin perder intimidad en las áreas privadas.</p>
+                </div>
+
+                <ul class="description__list">
+                  <li>Puente que balconea sobre el living y conecta con la zona íntima.</li>
+                  <li>Terraza privada en la suite principal para vistas despejadas.</li>
+                  <li>Ventanas DVH de piso a techo que enmarcan el exterior.</li>
+                  <li>Family room elevado listo para setear un cine en casa.</li>
+                </ul>
+              </div>
             </aside>
             <div class="model__visual" data-interval="4800">
               <div class="model__gallery">
@@ -263,13 +287,21 @@
           </div>
           <div class="model__layout">
             <aside class="model__details">
-              <p>Compacta y eficiente. Ideal para lotes urbanos, con ambientes que aprovechan cada metro sin resignar luz natural.</p>
-              <ul>
-                <li>Expande el living a un patio interior.</li>
-                <li>Circulaciones optimizadas para aprovechar m2.</li>
-                <li>Listo para ampliaciones futuras.</li>
-                <li>Espacio de guardado modulable en cada dormitorio.</li>
-              </ul>
+              <div class="description">
+                <span class="description__tag">Descripción</span>
+                <p class="description__headline">Compacta y eficiente, ideal para lotes urbanos que piden luz natural.</p>
+
+                <div class="description__body">
+                  <p>Una planta versátil que se organiza en torno a un patio interior, extendiendo la vida social hacia el exterior y permitiendo ventilación cruzada constante.</p>
+                </div>
+
+                <ul class="description__list">
+                  <li>Living que se expande al patio para sumar metros de uso diario.</li>
+                  <li>Circulaciones optimizadas para aprovechar cada m² disponible.</li>
+                  <li>Listo para ampliaciones futuras sin modificar la estructura.</li>
+                  <li>Espacios de guardado modulables en cada dormitorio.</li>
+                </ul>
+              </div>
             </aside>
             <div class="model__visual" data-interval="4300">
               <div class="model__gallery">
@@ -313,13 +345,22 @@
           </div>
           <div class="model__layout">
             <aside class="model__details">
-              <p>Linea minimalista y patio central como pulmon de luz, creando una casa que respira y ventila naturalmente.</p>
-              <ul>
-                <li>Patio vidriado que ordena la planta.</li>
-                <li>Galeria lineal vinculada a living.</li>
-                <li>Ingresos diferenciados para servicio.</li>
-                <li>Circulaciones con vistas cruzadas al jardin.</li>
-              </ul>
+              <div class="description">
+                <span class="description__tag">Descripción</span>
+                <p class="description__headline">Línea minimalista y patio central como pulmón de luz.</p>
+
+                <div class="description__body">
+                  <p>La casa se organiza alrededor de un patio vidriado que marca el ritmo de las circulaciones y garantiza ventilación natural en todos los ambientes.</p>
+                  <p>Las galerías conectan interior y exterior, creando un recorrido fluido para recibir, cocinar y descansar sin perder vistas al jardín.</p>
+                </div>
+
+                <ul class="description__list">
+                  <li>Patio vidriado que ordena la planta y aporta luz constante.</li>
+                  <li>Galería lineal vinculada al living para expandir reuniones.</li>
+                  <li>Ingresos diferenciados para uso cotidiano y de servicio.</li>
+                  <li>Circulaciones con vistas cruzadas al jardín en todo el trayecto.</li>
+                </ul>
+              </div>
             </aside>
             <div class="model__visual" data-interval="4000">
               <div class="model__gallery">
@@ -359,13 +400,22 @@
           </div>
           <div class="model__layout">
             <aside class="model__details">
-              <p>Volumenes escalonados y revestimientos nobles para climas frios, con espacios resguardados del viento y grandes paños vidriados al sol.</p>
-              <ul>
-                <li>Paneles aislantes reforzados.</li>
-                <li>Chimenea lista para instalar.</li>
-                <li>Circulacion semicubierta al exterior.</li>
-                <li>Hall de ingreso con banco y guardado de abrigo.</li>
-              </ul>
+              <div class="description">
+                <span class="description__tag">Descripción</span>
+                <p class="description__headline">Volúmenes escalonados y revestimientos nobles para climas fríos.</p>
+
+                <div class="description__body">
+                  <p>Los espacios se resguardan del viento mientras los grandes paños vidriados orientados al sol mantienen la calidez interior.</p>
+                  <p>Texturas cálidas y circulaciones semicubiertas acompañan la vida en entorno patagónico, con rincones listos para el fuego y el abrigo.</p>
+                </div>
+
+                <ul class="description__list">
+                  <li>Paneles aislantes reforzados que maximizan el rendimiento térmico.</li>
+                  <li>Chimenea lista para instalar en el corazón del estar.</li>
+                  <li>Circulación semicubierta para moverse afuera protegido.</li>
+                  <li>Hall de ingreso con banco y guardado de abrigo a mano.</li>
+                </ul>
+              </div>
             </aside>
             <div class="model__visual" data-interval="4700">
               <div class="model__gallery">
@@ -403,13 +453,21 @@
           </div>
           <div class="model__layout">
             <aside class="model__details">
-              <p>Tipologia en L con galeria corrida y visual al patio, abrazando el jardin para vivir adentro y afuera todo el dia.</p>
-              <ul>
-                <li>Living con vidrio esquinero.</li>
-                <li>Galeria techada en el pliegue.</li>
-                <li>Suite con salida al jardin.</li>
-                <li>Espacio flexible para playroom o estudio.</li>
-              </ul>
+              <div class="description">
+                <span class="description__tag">Descripción</span>
+                <p class="description__headline">Tipología en L que abraza el jardín para vivir adentro y afuera todo el día.</p>
+
+                <div class="description__body">
+                  <p>La galería corrida se apoya en el pliegue para generar sombra, mientras el vidrio esquinero abre el living hacia el patio y enmarca la vegetación.</p>
+                </div>
+
+                <ul class="description__list">
+                  <li>Living con vidrio esquinero que integra la vista verde.</li>
+                  <li>Galería techada a lo largo del pliegue de la planta.</li>
+                  <li>Suite principal con salida directa al jardín.</li>
+                  <li>Espacio flexible listo para playroom, estudio o home-office.</li>
+                </ul>
+              </div>
             </aside>
             <div class="model__visual" data-interval="4100">
               <div class="model__gallery">
@@ -447,13 +505,21 @@
           </div>
           <div class="model__layout">
             <aside class="model__details">
-              <p>Duplex compacto con planta baja libre y dormitorios arriba, ideal para quienes buscan metros bien aprovechados con aire de loft.</p>
-              <ul>
-                <li>Gran ventanal a patio privado.</li>
-                <li>Planta baja flexible para home-office.</li>
-                <li>Volumen escalonado con balcon frances.</li>
-                <li>Espacio para baulera bajo escalera.</li>
-              </ul>
+              <div class="description">
+                <span class="description__tag">Descripción</span>
+                <p class="description__headline">Dúplex compacto con planta baja libre y dormitorios arriba.</p>
+
+                <div class="description__body">
+                  <p>Aprovecha cada metro con un aire de loft: planta baja flexible, visual abierta al patio y un volumen escalonado que marca carácter urbano.</p>
+                </div>
+
+                <ul class="description__list">
+                  <li>Gran ventanal hacia un patio privado que extiende el estar.</li>
+                  <li>Planta baja adaptable para home-office o estudio creativo.</li>
+                  <li>Volumen escalonado con balcón francés en el frente.</li>
+                  <li>Baulera bajo escalera para sumar guardado sin ocupar espacio útil.</li>
+                </ul>
+              </div>
             </aside>
             <div class="model__visual" data-interval="3900">
               <div class="model__gallery">
