--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="hero__media">
         <!-- VIDEO: subi tu archivo a la carpeta "videos" y cambia el nombre -->
         <video class="video" autoplay muted loop playsinline>
-          <source src="Multimedia/Video%20principal/Video_Corto_de_Render_de_Casa.mp4" type="video/mp4">
+          <source src="https://pruebasnb.cloud/Multimedia/Video%20principal/Video_Corto_de_Render_de_Casa.mp4" type="video/mp4">
           Tu navegador no soporta video.
         </video>
       </div>
@@ -116,7 +116,7 @@
             </aside>
             <div class="model__visual" data-interval="4500">
               <div class="model__gallery">
-                <img class="slide active" src="Multimedia/Prop1Bixa/Render/11.FACHADA3.jpg" alt="Casa Andes render exterior">
+                <img class="slide active" src="https://pruebasnb.cloud/Multimedia/Prop1Bixa/Render/11.FACHADA3.jpg" alt="Casa Andes render exterior">
                 
                 <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop1Bixa/Render/1.AEREA.jpg" alt="">
                 <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop1Bixa/Render/5.COCINA.jpg" alt="Casa Andes dormitorio">                
